# mcp-notes-server

./: .env.example  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
articles/: linkedin-article.md  linkedin-post.md  mcp-notes-server-article.md
diagrams/: architecture.mmd  request-flow.mmd  security-boundary.mmd
examples/sample_notes/: agent-memory.md  ai-systems.md  mcp-basics.md
src/mcp_notes_server/: __init__.py  config.py  logging_config.py  note_store.py  schemas.py  server.py  tools.py
tests/: test_config.py  test_mcp_server.py  test_note_store.py  test_security_boundaries.py  test_tools.py
video-scripts/: short-form-script.md  youtube-outline.md
