[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "mcp-notes-server"
version = "0.1.0"
description = "A beginner-friendly, production-aware MCP server for a local Markdown notes workspace."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "revanthpp" }]
keywords = ["mcp", "model-context-protocol", "ai", "notes"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "mcp>=1.27,<2",
  "pydantic>=2.7,<3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9",
  "pytest-cov>=5.0,<8",
  "ruff>=0.9,<1",
]

[project.scripts]
mcp-notes-server = "mcp_notes_server.server:main"

[project.urls]
Homepage = "https://github.com/revanthpp/mcp-notes-server"
Issues = "https://github.com/revanthpp/mcp-notes-server/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_notes_server"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
